# nlp-tp4-quijote

./: .gitignore  README.md  compute_embeddings.py  nettoyage.md  pyproject.toml  quijote_clean.txt  requirements.txt  search.py
fdi_pln_2609_p4/: __init__.py  classic.py  cli.py  corpus.py  rag.py  semantic.py
