[project]
name = "fdi-pln-2609-p4"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.1",
    "nltk",
    "spacy",
    "ollama",
    "numpy",
    "python-dotenv",
    "rich",
    "loguru",
]

[project.scripts]
fdi-pln-2609-p4 = "fdi_pln_2609_p4.cli:main"

[project.urls]
Repository = "https://github.com/bsrdtoms/nlp-tp4-quijote"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fdi_pln_2609_p4"]

[tool.hatch.build.targets.wheel.sources]
"quijote_clean.txt" = "fdi_pln_2609_p4/data/quijote_clean.txt"
